--- a/java-lib/pom.xml
+++ b/java-lib/pom.xml
@@ -26,7 +26,7 @@ under the License.
   <groupId>org.clink</groupId>
   <name>Clink Java Lib</name>
   <version>0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
 
   <url>https://github.com/flink-extended/clink</url>
   <inceptionYear>2021</inceptionYear>
@@ -44,12 +44,140 @@ under the License.
     <connection>git@github.com:flink-extended/clink.git</connection>
   </scm>
 
+  <repositories>
+    <repository>
+      <id>flink-ml-2.0.0-rc1</id>
+      <url>https://repository.apache.org/content/repositories/orgapacheflink-1473</url>
+    </repository>
+  </repositories>
+
+  <properties>
+    <flink.version>1.14.0</flink.version>
+    <flink.ml.version>2.0.0</flink.ml.version>
+    <protobuf.version>3.14.0</protobuf.version>
+    <scala.version>2.12</scala.version>
+    <spotless.version>2.4.2</spotless.version>
+    <jna.version>5.6.0</jna.version>
+    <junit.version>4.12</junit.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna</artifactId>
-      <version>5.6.0</version>
-      <scope>provided</scope>
+      <version>${jna.version}</version>
+    </dependency>
+      <dependency>
+          <groupId>org.apache.flink</groupId>
+          <artifactId>flink-streaming-java_${scala.version}</artifactId>
+          <version>${flink.version}</version>
+      </dependency>
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-table-api-java</artifactId>
+      <version>${flink.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-core</artifactId>
+      <version>${flink.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-table-api-java-bridge_${scala.version}</artifactId>
+      <version>${flink.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-ml-core</artifactId>
+      <version>${flink.ml.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-ml-lib_${scala.version}</artifactId>
+      <version>${flink.ml.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.clink</groupId>
+      <artifactId>clink_proto</artifactId>
+      <version>${flink.ml.version}</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/lib/libclink_proto-speed.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+      <version>${protobuf.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-table-api-java-bridge_${scala.version}</artifactId>
+      <version>${flink.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-table-planner_${scala.version}</artifactId>
+      <version>${flink.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>com.diffplug.spotless</groupId>
+          <artifactId>spotless-maven-plugin</artifactId>
+          <version>${spotless.version}</version>
+          <configuration>
+            <java>
+              <googleJavaFormat>
+                <version>1.7</version>
+                <style>AOSP</style>
+              </googleJavaFormat>
+
+              <!-- \# refers to the static imports -->
+              <importOrder>
+                <order>org.apache.flink,org.apache.flink.shaded,,javax,java,scala,\#</order>
+              </importOrder>
+
+              <removeUnusedImports />
+            </java>
+          </configuration>
+          <executions>
+            <execution>
+              <id>spotless-check</id>
+              <phase>validate</phase>
+              <goals>
+                <goal>check</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
