--- a/docker/Dockerfile_ubuntu_1604
+++ b/docker/Dockerfile_ubuntu_1604
@@ -18,17 +18,17 @@
 
 FROM ubuntu:16.04 as base
 
-RUN apt-get update && apt-get install -y apt-transport-https software-properties-common sudo
+# RUN apt-get update && apt-get install -y apt-transport-https software-properties-common sudo
 
 RUN echo "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial main" >> /etc/apt/sources.list && \
     echo "deb-src http://apt.llvm.org/xenial/ llvm-toolchain-xenial main" >> /etc/apt/sources.list && \
     echo "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-11 main" >> /etc/apt/sources.list && \
     echo "deb [arch=amd64] https://storage.googleapis.com/bazel-apt stable jdk1.8" >> /etc/apt/sources.list.d/bazel.list
 
-RUN add-apt-repository -y ppa:ubuntu-toolchain-r/test && \
-    apt-get update && \
-    apt-get install -y --allow-unauthenticated --fix-missing bazel clang-11 gcc-8 g++-8 openjdk-8-jdk && \
-    rm -rf /var/lib/apt/lists/* 
+# RUN add-apt-repository -y ppa:ubuntu-toolchain-r/test && \
+#     apt-get update && \
+#     apt-get install -y --allow-unauthenticated --fix-missing bazel clang-11 gcc-8 g++-8 openjdk-8-jdk && \
+#     rm -rf /var/lib/apt/lists/* 
 
-RUN update-alternatives --install /usr/bin/clang clang /usr/bin/clang-11 11 && \
-    update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-11 11
+# RUN update-alternatives --install /usr/bin/clang clang /usr/bin/clang-11 11 && \
+#     update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-11 11
