--- a/.github/workflows/clink_ci_docker.yml
+++ b/.github/workflows/clink_ci_docker.yml
@@ -1,22 +1,31 @@
 name: Clink CI Docker
 
-on: [push, pull_request]
+on: [workflow_dispatch, push, pull_request]
 
 jobs:
   bazel_test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os: ["centos7.7.1908", "ubuntu16.04"]
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
       - name: Update submodules
         run: git submodule update --init --recursive
       - name: Pull Docker image
-        run: docker pull docker.io/flinkextended/clink:${{matrix.os}}
+        run: docker pull docker.io/zhouyunfeng/clink-dev:latest_ubuntu_1604
+      - name: Check TFRT Commit ID
+        run: |
+          docker_tfrt_id=`docker inspect -f '{{ index .Config.Labels "tfrt.commit.id" }}' \
+            zhouyunfeng/clink-dev:latest_ubuntu_1604`
+          current_tfrt_id=`git --git-dir ./tfrt/.git rev-parse HEAD`
+          echo "Docker's TFRT Commit ID: $docker_tfrt_id"
+          echo "Current TFRT Commit ID: $current_tfrt_id"
+          if [ "${docker_tfrt_id}" != "${current_tfrt_id}" ]; then
+            echo "Current TFRT Commit ID does not match that in Docker image."
+            echo "Please update either TFRT Submodule."
+            exit 1
+          fi
       - name: Run tests in Docker image
         run: |
           docker run -t -v ${GITHUB_WORKSPACE}:/root/clink -w /root/clink \
-            docker.io/flinkextended/clink:${{matrix.os}} /bin/bash \
-            bazel test $(bazel query //...) -c dbg
+            docker.io/zhouyunfeng/clink-dev:latest_ubuntu_1604 /bin/bash \
+            bazel test --disk_cache=~/.cache/bazel $(bazel query //...)
